--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "t-i-0414 <gutlo.ol0414@gmail.com> (https://github.com/t-i-0414/)",
   "scripts": {
     "build": "craco build",
-    "build-storybook": "build-storybook -s public",
+    "build-storybook": "NODE_OPTIONS=--openssl-legacy-provider build-storybook -s public",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --spec 'cypress/e2e/*.{spec,cy}.ts'",
     "eject": "craco eject",
@@ -45,12 +45,15 @@
       "last 1 safari version"
     ]
   },
+  "resolutions": {
+    "@storybook/react-docgen-typescript-plugin": "1.0.6--canary.9.cd77847.0"
+  },
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.7",
+    "react-hook-form": "^7.43.8",
     "react-redux": "^7.2.2",
     "react-scripts": "5.0.1",
     "redux": "^4.0.5",
@@ -74,23 +77,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/eslint": "8.21.2",
+    "@types/eslint": "8.21.3",
     "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.3",
+    "@types/node": "^18.15.10",
     "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.11",
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.4",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "cypress": "^12.8.1",
     "eslint": "8.36.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-node": "^0.3.7",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-cypress": "^2.12.1",
@@ -107,7 +110,7 @@
     "lint-staged": "^13.2.0",
     "npm-check": "^6.0.1",
     "postcss-styled-syntax": "^0.4.0",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.7",
     "prettier-stylelint": "^0.4.2",
     "react-test-renderer": "^18.2.0",
     "sort-package-json": "^2.4.1",
