--- a/package.json
+++ b/package.json
@@ -50,6 +50,21 @@
   },
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "npm-run-all": "^4.1.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-redux": "^7.2.2",
+    "react-scripts": "5.0.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.9",
+    "tslib": "^2.5.0",
+    "typescript": "5.0.3",
+    "typesync": "^0.10.0"
+  },
+  "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
@@ -94,27 +109,14 @@
     "jest": "^29.5.0",
     "lint-staged": "^13.2.0",
     "npm-check": "^6.0.1",
-    "npm-run-all": "^4.1.5",
     "postcss-styled-syntax": "^0.4.0",
     "prettier": "^2.8.7",
     "prettier-stylelint": "^0.4.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.9",
-    "react-redux": "^7.2.2",
-    "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
     "sort-package-json": "^2.4.1",
-    "styled-components": "^5.3.9",
     "stylelint": "^15.4.0",
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard": "^32.0.0",
-    "ts-jest": "^29.0.5",
-    "tslib": "^2.5.0",
-    "typescript": "5.0.3",
-    "typesync": "^0.10.0"
+    "ts-jest": "^29.0.5"
   }
 }
