--- a/package.json
+++ b/package.json
@@ -62,12 +62,12 @@
     "styled-components": "^5.3.10",
     "tslib": "^2.5.0",
     "typescript": "5.0.4",
-    "typesync": "^0.10.0"
+    "typesync": "^0.11.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.5",
     "@jest/globals": "^29.5.0",
     "@storybook/addon-actions": "^7.0.6",
     "@storybook/addon-essentials": "^7.0.6",
@@ -81,8 +81,10 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/babel__preset-env": "^7.9.2",
     "@types/eslint": "8.37.0",
+    "@types/eslint-config-prettier": "^6.11.0",
     "@types/jest": "^29.5.1",
-    "@types/node": "^18.15.11",
+    "@types/lint-staged": "^13.2.0",
+    "@types/node": "^18.16.3",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
@@ -91,15 +93,15 @@
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "cypress": "^12.10.0",
-    "eslint": "8.38.0",
+    "eslint": "8.39.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-node": "^0.3.7",
     "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-cypress": "^2.13.2",
+    "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -118,7 +120,7 @@
     "react-test-renderer": "^18.2.0",
     "sort-package-json": "^2.4.1",
     "storybook": "^7.0.6",
-    "stylelint": "^15.5.0",
+    "stylelint": "^15.6.1",
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard": "^33.0.0",
     "ts-jest": "^29.1.0"
