--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
   },
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "immer": "^9.0.21",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
-    "react-redux": "^7.2.2",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -112,6 +114,7 @@
     "eslint-plugin-testing-library": "^5.11.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.1",
     "npm-check": "^6.0.1",
     "postcss-styled-syntax": "^0.4.0",
