--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-compare": "^3.2.2",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
