--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,10 +91,10 @@ jobs:
         run: pnpm dlx playwright install --with-deps
 
       - name: Build Storybook
-        run: yarn build-storybook --quiet
+        run: pnpm build-storybook --quiet
 
       - name: Serve Storybook and run tests
         run: |
           pnpm dlx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
             "pnpm dlx http-server storybook-static --port 6006 --silent" \
-            "pnpm dlx wait-on tcp:6006 && yarn test-storybook"
+            "pnpm dlx wait-on tcp:6006 && pnpm test-storybook"
