--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-reversi",
-  "version": "1.11.0",
+  "version": "2.0.0",
   "homepage": "https://happy-williams-02dc8b.netlify.app/",
   "bugs": {
     "url": "https://github.com/t-i-0414/react-reversi/issues",
@@ -10,11 +10,10 @@
   "license": "MIT",
   "author": "t-i-0414 <gutlo.ol0414@gmail.com> (https://github.com/t-i-0414/)",
   "scripts": {
-    "build": "craco build",
+    "build": "vite build",
     "build-storybook": "storybook build",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --spec 'cypress/e2e/*.{spec,cy}.ts'",
-    "eject": "craco eject",
     "format": "run-p \"format:*\"",
     "format:es": "eslint --fix './**/*.{js,jsx,ts,tsx}' --ignore-path ./.eslintignore",
     "format:prettier": "prettier --write './*' --ignore-unknown --ignore-path ./.prettierignore",
@@ -26,8 +25,9 @@
     "lint:sort-package-json": "sort-package-json --check \"package.json\"",
     "lint:style": "stylelint 'src/**/*.{css,scss,jsx,ts,tsx}'",
     "prepare": "husky install",
+    "preview": "vite preview",
     "run-ci:test-storybook": "run-p storybook:ci test-storybook:ci",
-    "start": "craco start",
+    "start": "vite",
     "storybook": "storybook dev -p 6006",
     "storybook:ci": "pm2 start 'storybook dev -p 6006 --ci --no-open' --name storybook:ci",
     "test": "jest",
@@ -53,7 +53,6 @@
     "@storybook/react-docgen-typescript-plugin": "1.0.6--canary.9.cd77847.0"
   },
   "dependencies": {
-    "@craco/craco": "^7.1.0",
     "@reduxjs/toolkit": "^1.9.5",
     "immer": "^9.0.21",
     "npm-run-all": "^4.1.5",
@@ -62,7 +61,6 @@
     "react-fast-compare": "^3.2.2",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
-    "react-scripts": "5.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -80,6 +78,7 @@
     "@storybook/addon-essentials": "^7.0.18",
     "@storybook/addon-interactions": "^7.0.18",
     "@storybook/addon-links": "^7.0.18",
+    "@storybook/builder-vite": "^7.0.18",
     "@storybook/jest": "^0.1.0",
     "@storybook/node-logger": "^7.0.18",
     "@storybook/react": "^7.0.18",
@@ -105,6 +104,7 @@
     "@types/testing-library__jest-dom": "^5.14.6",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
+    "@vitejs/plugin-react": "^4.0.0",
     "cypress": "^12.13.0",
     "eslint": "8.41.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -134,7 +134,9 @@
     "stylelint": "^15.6.2",
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard": "^33.0.0",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.0",
+    "vite": "^4.3.9",
+    "vite-plugin-html": "^3.2.0"
   },
   "packageManager": "pnpm@8.6.0"
 }
