--- a/package.json
+++ b/package.json
@@ -78,11 +78,10 @@
     "@storybook/addon-essentials": "^7.0.18",
     "@storybook/addon-interactions": "^7.0.18",
     "@storybook/addon-links": "^7.0.18",
-    "@storybook/builder-vite": "^7.0.18",
     "@storybook/jest": "^0.1.0",
     "@storybook/node-logger": "^7.0.18",
     "@storybook/react": "^7.0.18",
-    "@storybook/react-webpack5": "^7.0.18",
+    "@storybook/react-vite": "^7.0.18",
     "@storybook/test-runner": "^0.10.0",
     "@storybook/testing-library": "^0.1.0",
     "@testing-library/jest-dom": "^5.16.5",
