--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,4 +91,4 @@ jobs:
         run: npm install -g pm2
 
       - name: Serve Storybook and run tests
-        run: pnpm run playwright install --with-deps && pnpm run run-ci:test-storybook
+        run: pnpm run playwright:install && pnpm run ci:test-storybook
