--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "build": "vite build",
     "build-storybook": "storybook build",
+    "ci:test-storybook": "run-p storybook:ci test-storybook:ci",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --spec 'cypress/e2e/*.{spec,cy}.ts'",
     "format": "run-p \"format:*\"",
@@ -24,9 +25,9 @@
     "lint:prettier": "prettier  --check './*' --ignore-unknown --ignore-path ./.prettierignore",
     "lint:sort-package-json": "sort-package-json --check \"package.json\"",
     "lint:style": "stylelint 'src/**/*.{css,scss,jsx,ts,tsx}'",
+    "playwright:install": "playwright install --with-deps",
     "prepare": "husky install",
     "preview": "vite preview",
-    "run-ci:test-storybook": "run-p storybook:ci test-storybook:ci",
     "start": "vite",
     "storybook": "storybook dev -p 6006",
     "storybook:ci": "pm2 start 'storybook dev -p 6006 --ci --no-open' --name storybook:ci",
