--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "test-storybook:ci": "pnpm dlx wait-on tcp:6006 && pnpm run test-storybook",
     "type-check": "pnpm tsc --noEmit",
     "typesync": "pnpm dlx typesync",
-    "upgrade-interactive": "npm-check -u"
+    "upgrade-interactive": "pnpm up --recursive --latest --interactive"
   },
   "browserslist": {
     "production": [
@@ -65,24 +65,24 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^6.0.3",
+    "styled-components": "^6.0.4",
     "tslib": "^2.6.0",
     "typescript": "5.1.6",
     "typesync": "^0.11.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.22.7",
+    "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@jest/globals": "^29.6.1",
-    "@storybook/addon-actions": "^7.0.26",
-    "@storybook/addon-essentials": "^7.0.26",
-    "@storybook/addon-interactions": "^7.0.26",
-    "@storybook/addon-links": "^7.0.26",
+    "@storybook/addon-actions": "^7.0.27",
+    "@storybook/addon-essentials": "^7.0.27",
+    "@storybook/addon-interactions": "^7.0.27",
+    "@storybook/addon-links": "^7.0.27",
     "@storybook/jest": "^0.1.0",
-    "@storybook/node-logger": "^7.0.26",
-    "@storybook/react": "^7.0.26",
-    "@storybook/react-vite": "^7.0.26",
+    "@storybook/node-logger": "^7.0.27",
+    "@storybook/react": "^7.0.27",
+    "@storybook/react-vite": "^7.0.27",
     "@storybook/test-runner": "^0.11.0",
     "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -95,25 +95,25 @@
     "@types/lint-staged": "^13.2.0",
     "@types/node": "^18.16.3",
     "@types/prettier": "^2.7.3",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.11",
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.26",
-    "@types/testing-library__jest-dom": "^5.14.7",
+    "@types/testing-library__jest-dom": "^5.14.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "cypress": "^12.17.1",
-    "eslint": "8.44.0",
+    "eslint": "8.45.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-node": "^0.3.7",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.2",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
@@ -124,20 +124,19 @@
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "lint-staged": "^13.2.3",
-    "npm-check": "^6.0.1",
-    "playwright": "^1.35.1",
+    "playwright": "^1.36.1",
     "postcss-styled-syntax": "^0.4.0",
     "prettier": "^3.0.0",
     "prettier-stylelint": "^0.4.2",
     "react-test-renderer": "^18.2.0",
     "sort-package-json": "^2.5.1",
-    "storybook": "^7.0.26",
+    "storybook": "^7.0.27",
     "stylelint": "^15.10.1",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard": "^34.0.0",
     "ts-jest": "^29.1.1",
-    "vite": "^4.4.3",
+    "vite": "^4.4.4",
     "vite-plugin-html": "^3.2.0"
   },
-  "packageManager": "pnpm@8.6.3"
+  "packageManager": "pnpm@8.6.7"
 }
