--- a/.github/workflows/pr-release-template-production.yml
+++ b/.github/workflows/pr-release-template-production.yml
@@ -1,11 +1,13 @@
-name: 'Create PR for Deploying for Production'
+name: 'Create Release PR'
 
 on: workflow_dispatch
 
 jobs:
   create-pr-deploy-production:
-    name: 'Create PR'
+    name: 'Create Release PR'
     runs-on: ubuntu-latest
+    env:
+      GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     timeout-minutes: 10
     steps:
       - name: Checkout Repository
@@ -16,16 +18,18 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1
+          ruby-version: 3.2
 
-      - name: Execute git-pr-release
+      - name: Install gems
+        run: gem install git-pr-release
+
+      - name: Set origin url
+        run: git remote set-url origin "https://${GITHUB_ACTOR}:${GIT_PR_RELEASE_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+
+      - name: Create Release PR
+        run: git-pr-release --no-fetch
         env:
           GIT_PR_RELEASE_BRANCH_PRODUCTION: master
           GIT_PR_RELEASE_BRANCH_STAGING: develop
-          GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GIT_PR_RELEASE_TEMPLATE: '.github/pr-release-template-production.erb'
+          GIT_PR_RELEASE_TEMPLATE: '.github/create-release-pr-template.erb'
           GIT_PR_RELEASE_LABELS: 'release'
-        run: |
-          gem install git-pr-release -v "2.1.2"
-          git remote set-url origin "https://${GITHUB_ACTOR}:${GIT_PR_RELEASE_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
-          git-pr-release || echo "Done."
