--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
       - uses: github/codeql-action/autobuild@v2
       - uses: github/codeql-action/analyze@v2
 
-  type-check:
+  typecheck:
     name: Type Check
     runs-on: ubuntu-latest
     needs: [install-dependencies]
@@ -58,7 +58,7 @@ jobs:
         uses: ./.github/actions/install-dependencies
 
       - name: Type Check
-        run: pnpm type-check
+        run: pnpm typecheck
 
   unit-test:
     name: Unit Test
