--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test": "jest",
     "test-storybook": "test-storybook",
     "test-storybook:ci": "pnpm dlx wait-on tcp:6006 && pnpm run test-storybook",
-    "type-check": "pnpm tsc --noEmit",
+    "typecheck": "pnpm tsc --noEmit",
     "typesync": "pnpm dlx typesync",
     "upgrade-interactive": "pnpm up --recursive --latest --interactive"
   },
@@ -60,60 +60,60 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-compare": "^3.2.2",
-    "react-hook-form": "^7.46.0",
+    "react-hook-form": "^7.46.1",
     "react-redux": "^8.1.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^6.0.7",
+    "styled-components": "^6.0.8",
     "tslib": "^2.6.2",
     "typescript": "5.2.2",
     "typesync": "^0.11.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.22.14",
-    "@babel/preset-react": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.11",
-    "@jest/globals": "^29.6.4",
-    "@storybook/addon-actions": "^7.4.0",
-    "@storybook/addon-essentials": "^7.4.0",
-    "@storybook/addon-interactions": "^7.4.0",
-    "@storybook/addon-links": "^7.4.0",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.22.15",
+    "@jest/globals": "^29.7.0",
+    "@storybook/addon-actions": "^7.4.2",
+    "@storybook/addon-essentials": "^7.4.2",
+    "@storybook/addon-interactions": "^7.4.2",
+    "@storybook/addon-links": "^7.4.2",
     "@storybook/jest": "^0.2.2",
-    "@storybook/node-logger": "^7.4.0",
-    "@storybook/react": "^7.4.0",
-    "@storybook/react-vite": "^7.4.0",
+    "@storybook/node-logger": "^7.4.2",
+    "@storybook/react": "^7.4.2",
+    "@storybook/react-vite": "^7.4.2",
     "@storybook/test-runner": "^0.13.0",
-    "@storybook/testing-library": "^0.2.0",
-    "@testing-library/jest-dom": "^6.1.2",
+    "@storybook/testing-library": "^0.2.1",
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/babel__preset-env": "^7.9.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/babel__preset-env": "^7.9.3",
     "@types/eslint": "8.44.2",
     "@types/eslint-config-prettier": "^6.11.0",
-    "@types/jest": "^29.5.4",
+    "@types/jest": "^29.5.5",
     "@types/lint-staged": "^13.2.0",
-    "@types/node": "^20.5.9",
+    "@types/node": "^20.6.2",
     "@types/prettier": "^3.0.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.26",
-    "@types/react-test-renderer": "^18.0.0",
+    "@types/react-test-renderer": "^18.0.1",
     "@types/redux-logger": "^3.0.8",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "^5.1.27",
     "@types/testing-library__jest-dom": "^5.14.9",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "@vitejs/plugin-react": "^4.0.4",
-    "cypress": "^13.1.0",
-    "eslint": "8.48.0",
+    "cypress": "^13.2.0",
+    "eslint": "8.49.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-cypress": "^2.14.0",
     "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-jest": "^27.4.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
@@ -121,16 +121,16 @@
     "eslint-plugin-storybook": "^0.6.13",
     "eslint-plugin-testing-library": "^6.0.1",
     "husky": "^8.0.3",
-    "jest": "^29.6.4",
-    "jest-environment-jsdom": "^29.6.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^14.0.1",
-    "playwright": "^1.37.1",
-    "postcss-styled-syntax": "^0.4.0",
+    "playwright": "^1.38.0",
+    "postcss-styled-syntax": "^0.5.0",
     "prettier": "^3.0.3",
     "prettier-stylelint": "^0.4.2",
     "react-test-renderer": "^18.2.0",
     "sort-package-json": "^2.5.1",
-    "storybook": "^7.4.0",
+    "storybook": "^7.4.2",
     "stylelint": "^15.10.3",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard": "^34.0.0",
@@ -138,5 +138,5 @@
     "vite": "^4.4.9",
     "vite-plugin-html": "^3.2.0"
   },
-  "packageManager": "pnpm@8.7.1"
+  "packageManager": "pnpm@8.7.5"
 }
