--- a/package.json
+++ b/package.json
@@ -54,14 +54,14 @@
     "@storybook/react-docgen-typescript-plugin": "1.0.6--canary.9.cd77847.0"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "immer": "^10.0.2",
+    "@reduxjs/toolkit": "^1.9.7",
+    "immer": "^10.0.3",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-compare": "^3.2.2",
-    "react-hook-form": "^7.46.1",
-    "react-redux": "^8.1.2",
+    "react-hook-form": "^7.47.0",
+    "react-redux": "^8.1.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -73,70 +73,70 @@
   "devDependencies": {
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
-    "@babel/preset-typescript": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.0",
     "@jest/globals": "^29.7.0",
-    "@storybook/addon-actions": "^7.4.2",
-    "@storybook/addon-essentials": "^7.4.2",
-    "@storybook/addon-interactions": "^7.4.2",
-    "@storybook/addon-links": "^7.4.2",
-    "@storybook/jest": "^0.2.2",
-    "@storybook/node-logger": "^7.4.2",
-    "@storybook/react": "^7.4.2",
-    "@storybook/react-vite": "^7.4.2",
+    "@storybook/addon-actions": "^7.4.6",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-interactions": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/node-logger": "^7.4.6",
+    "@storybook/react": "^7.4.6",
+    "@storybook/react-vite": "^7.4.6",
     "@storybook/test-runner": "^0.13.0",
-    "@storybook/testing-library": "^0.2.1",
+    "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/babel__preset-env": "^7.9.3",
-    "@types/eslint": "8.44.2",
-    "@types/eslint-config-prettier": "^6.11.0",
+    "@types/eslint": "8.44.3",
+    "@types/eslint-config-prettier": "^6.11.1",
     "@types/jest": "^29.5.5",
     "@types/lint-staged": "^13.2.0",
-    "@types/node": "^20.6.2",
+    "@types/node": "^20.8.4",
     "@types/prettier": "^3.0.0",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-redux": "^7.1.26",
-    "@types/react-test-renderer": "^18.0.1",
-    "@types/redux-logger": "^3.0.8",
-    "@types/styled-components": "^5.1.27",
+    "@types/react": "^18.2.27",
+    "@types/react-dom": "^18.2.12",
+    "@types/react-redux": "^7.1.27",
+    "@types/react-test-renderer": "^18.0.3",
+    "@types/redux-logger": "^3.0.10",
+    "@types/styled-components": "^5.1.28",
     "@types/testing-library__jest-dom": "^5.14.9",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "@vitejs/plugin-react": "^4.0.4",
-    "cypress": "^13.2.0",
-    "eslint": "8.49.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "@vitejs/plugin-react": "^4.1.0",
+    "cypress": "^13.3.0",
+    "eslint": "8.51.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-node": "^0.3.9",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-cypress": "^2.14.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jest": "^27.4.0",
+    "eslint-plugin-jest": "^27.4.2",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.6.13",
-    "eslint-plugin-testing-library": "^6.0.1",
+    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-testing-library": "^6.0.2",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^14.0.1",
-    "playwright": "^1.38.0",
+    "playwright": "^1.38.1",
     "postcss-styled-syntax": "^0.5.0",
     "prettier": "^3.0.3",
     "prettier-stylelint": "^0.4.2",
     "react-test-renderer": "^18.2.0",
-    "sort-package-json": "^2.5.1",
-    "storybook": "^7.4.2",
+    "sort-package-json": "^2.6.0",
+    "storybook": "^7.4.6",
     "stylelint": "^15.10.3",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard": "^34.0.0",
     "ts-jest": "^29.1.1",
-    "vite": "^4.4.9",
+    "vite": "^4.4.11",
     "vite-plugin-html": "^3.2.0"
   },
-  "packageManager": "pnpm@8.7.5"
+  "packageManager": "pnpm@8.9.0-1"
 }
