--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -12,7 +12,7 @@ runs:
       uses: pnpm/action-setup@v2
       id: pnpm-install
       with:
-        version: 8.9.0-1
+        version: 8.9.2
         run_install: false
 
     - name: Get pnpm store directory
