--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8.9.0-1
+          version: 8.9.2
 
       - name: Cypress.io
         uses: cypress-io/github-action@v5
