--- a/package.json
+++ b/package.json
@@ -65,15 +65,15 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^6.0.8",
+    "styled-components": "^6.1.0",
     "tslib": "^2.6.2",
     "typescript": "5.2.2",
     "typesync": "^0.11.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
-    "@babel/preset-typescript": "^7.23.0",
+    "@babel/preset-typescript": "^7.23.2",
     "@jest/globals": "^29.7.0",
     "@storybook/addon-actions": "^7.4.6",
     "@storybook/addon-essentials": "^7.4.6",
@@ -85,18 +85,18 @@
     "@storybook/react-vite": "^7.4.6",
     "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.2",
-    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/babel__preset-env": "^7.9.3",
-    "@types/eslint": "8.44.3",
+    "@types/eslint": "8.44.4",
     "@types/eslint-config-prettier": "^6.11.1",
     "@types/jest": "^29.5.5",
     "@types/lint-staged": "^13.2.0",
-    "@types/node": "^20.8.4",
+    "@types/node": "^20.8.6",
     "@types/prettier": "^3.0.0",
-    "@types/react": "^18.2.27",
-    "@types/react-dom": "^18.2.12",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
     "@types/react-redux": "^7.1.27",
     "@types/react-test-renderer": "^18.0.3",
     "@types/redux-logger": "^3.0.10",
@@ -105,7 +105,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "@vitejs/plugin-react": "^4.1.0",
-    "cypress": "^13.3.0",
+    "cypress": "^13.3.1",
     "eslint": "8.51.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
@@ -119,12 +119,12 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-testing-library": "^6.0.2",
+    "eslint-plugin-testing-library": "^6.1.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^14.0.1",
-    "playwright": "^1.38.1",
+    "lint-staged": "^15.0.1",
+    "playwright": "^1.39.0",
     "postcss-styled-syntax": "^0.5.0",
     "prettier": "^3.0.3",
     "prettier-stylelint": "^0.4.2",
@@ -138,5 +138,5 @@
     "vite": "^4.4.11",
     "vite-plugin-html": "^3.2.0"
   },
-  "packageManager": "pnpm@8.9.0-1"
+  "packageManager": "pnpm@8.9.2"
 }
