--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8.9.2
+          version: 8.10.0-0
 
       - name: Cypress.io
         uses: cypress-io/github-action@v5
