--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
     },
     "jsx": "preserve",
     "resolveJsonModule": true,
@@ -21,7 +21,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
 }
