--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -1,18 +1,18 @@
-name: 'Install dependencies'
-description: 'Install or restore dependencies'
+name: "Install dependencies"
+description: "Install or restore dependencies"
 runs:
-  using: 'composite'
+  using: "composite"
   steps:
     - name: Install Node.js
       uses: actions/setup-node@v3
       with:
-        node-version-file: '.tool-versions'
+        node-version-file: ".tool-versions"
 
     - name: Install pnpm
       uses: pnpm/action-setup@v2
       id: pnpm-install
       with:
-        version: 8.14.0
+        version: 9.0.2
         run_install: false
 
     - name: Get pnpm store directory
