--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint:sort-package-json": "sort-package-json --check \"package.json\"",
     "lint:style": "stylelint 'src/**/*.{css,scss,jsx,ts,tsx}'",
     "playwright:install": "playwright install --with-deps",
-    "prepare": "husky install",
+    "prepare": "husky",
     "preview": "vite preview",
     "start": "vite",
     "storybook": "storybook dev -p 6006",
@@ -138,5 +138,5 @@
     "vite": "^5.3.2",
     "vite-plugin-html": "^3.2.2"
   },
-  "packageManager": "pnpm@9.1.4"
+  "packageManager": "pnpm@9.4.0"
 }
