--- a/package.json
+++ b/package.json
@@ -60,40 +60,40 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-compare": "^3.2.2",
-    "react-hook-form": "^7.52.0",
+    "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
-    "styled-components": "^6.1.11",
+    "styled-components": "^6.1.12",
     "tslib": "^2.6.3",
-    "typescript": "5.5.2",
-    "typesync": "^0.12.1"
+    "typescript": "5.5.4",
+    "typesync": "^0.13.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@jest/globals": "^29.7.0",
-    "@storybook/addon-actions": "^8.1.11",
-    "@storybook/addon-essentials": "^8.1.11",
-    "@storybook/addon-interactions": "^8.1.11",
-    "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-actions": "8.2.6",
+    "@storybook/addon-essentials": "8.2.6",
+    "@storybook/addon-interactions": "8.2.6",
+    "@storybook/addon-links": "8.2.6",
     "@storybook/jest": "^0.2.3",
-    "@storybook/node-logger": "^8.1.11",
-    "@storybook/react": "^8.1.11",
-    "@storybook/react-vite": "^8.1.11",
-    "@storybook/test-runner": "^0.19.0",
+    "@storybook/node-logger": "8.2.6",
+    "@storybook/react": "8.2.6",
+    "@storybook/react-vite": "8.2.6",
+    "@storybook/test-runner": "^0.19.1",
     "@storybook/testing-library": "^0.2.2",
-    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/babel__preset-env": "^7.9.7",
-    "@types/eslint": "8.56.10",
+    "@types/eslint": "9.6.0",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/jest": "^29.5.12",
     "@types/lint-staged": "^13.3.0",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.12",
     "@types/prettier": "^3.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -101,41 +101,40 @@
     "@types/react-test-renderer": "^18.3.0",
     "@types/redux-logger": "^3.0.13",
     "@types/styled-components": "^5.1.34",
-    "@types/testing-library__jest-dom": "^5.14.9",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/parser": "^7.17.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "cypress": "^13.12.0",
+    "cypress": "^13.13.1",
     "eslint": "8.57.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.1.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-cypress": "^3.3.0",
+    "eslint-plugin-cypress": "^3.4.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-promise": "^6.2.0",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-promise": "^7.0.0",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-testing-library": "^6.2.2",
-    "husky": "^9.0.11",
+    "husky": "^9.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.7",
-    "playwright": "^1.45.0",
+    "playwright": "^1.45.3",
     "postcss-styled-syntax": "^0.6.4",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "prettier-stylelint": "^0.4.2",
     "react-test-renderer": "^18.3.1",
     "sort-package-json": "^2.10.0",
-    "storybook": "^8.1.11",
-    "stylelint": "^16.6.1",
+    "storybook": "8.2.6",
+    "stylelint": "^16.7.0",
     "stylelint-config-recess-order": "^5.0.1",
     "stylelint-config-standard": "^36.0.1",
-    "ts-jest": "^29.1.5",
-    "vite": "^5.3.2",
+    "ts-jest": "^29.2.3",
+    "vite": "^5.3.4",
     "vite-plugin-html": "^3.2.2"
   },
   "packageManager": "pnpm@9.4.0"
